fix stack icons alignment

--- a/src/App.css
+++ b/src/App.css
@@ -169,17 +169,22 @@ a.highlight:hover {
     max-width: 700px;
     justify-items: left;
   }
-  .project-stack {
-    max-width: 287px;
-  }
   .dotted-divider {
     max-width: 700px;
-  }
-  .stack {
-    text-align: center;
   }
   .dot {
     top: 35px;
     left: 358px;
+  }
+  .icons-wrapper {
+    margin: unset;
+  }
+  .grid-wrapper-4 {
+    max-width: 700px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+  .grid-wrapper-3 {
+    max-width: 180px;
+    gap: 10px;
   }
 }
